# walker_bridge_cpp

./: CMakeLists.txt  README.md  default.json  package.xml
include/udp_ros_bridge/: command_decoder.hpp  command_router.hpp  udp_bridge_node.hpp  udp_receiver.hpp
include/udp_ros_bridge/decoders/: json_command_decoder.hpp
include/udp_ros_bridge/protocol/: cartesian_pose_command.hpp  command_decoder.hpp  command_message.hpp  spsc_queue.hpp  udp_message.hpp
include/walker_bridge_cpp/: command_router.hpp  udp_receiver.hpp  walker_bridge.hpp
include/walker_bridge_cpp/protocol/: command_message.hpp
src/: command_decoder.cpp  command_router.cpp  json_command_decoder.cpp  main.cpp  udp_bridge_node.cpp  udp_receiver.cpp  walker_bridge.cpp
test_tools/: README.md  udp_sender.py  udp_sender_2.py  udp_sender_3.py  udp_sender_fake.py  velocity_udp_sender.py
test_tools/data/: pose_1.json  pose_2.json  pose_3.json  pose_3_0.json  pose_3_1.json  pose_3_2.json  pose_4.json
test_tools/test_data/: l_pose_0.json  l_pose_1.json  l_pose_2.json  l_pose_3.json  pose_3_0.json  pose_3_1.json  pose_3_2.json  r_pose_0.json  r_pose_1.json
